@@ -19,18 +19,17 @@ import software.amazon.awscdk.services.logs.LogGroupProps;
 import software.amazon.awscdk.services.logs.RetentionDays;
 import software.constructs.Construct;
 
-import java.util.List;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 
 public class ProductsServiceStack extends Stack {
-    private static final int SERVER_PORT = 8080;
-
     public ProductsServiceStack(final Construct scope, final String id, final StackProps props,
                                 ProductsServiceProps productsServiceProps) {
         super(scope, id, props);
 
-        Table productDdb = new Table(this, "ProductsDdb", TableProps.builder()
+        Table productsDdb = new Table(this, "ProductsDdb", TableProps.builder()
                 .partitionKey(Attribute.builder()
                         .name("id")
                         .type(AttributeType.STRING)
@@ -48,7 +47,7 @@ public class ProductsServiceStack extends Stack {
                         .cpu(512)
                         .memoryLimitMiB(1024)
                         .build());
-        productDdb.grantReadWriteData(fargateTaskDefinition.getTaskRole());
+        productsDdb.grantReadWriteData(fargateTaskDefinition.getTaskRole());
 
         AwsLogDriver logDriver = new AwsLogDriver(AwsLogDriverProps.builder()
                 .logGroup(new LogGroup(this, "LogGroup", LogGroupProps.builder()
@@ -59,23 +58,26 @@ public class ProductsServiceStack extends Stack {
                 .streamPrefix("ProductsService")
                 .build());
 
+        Map<String, String> envVariables = new HashMap<>();
+        envVariables.put("SERVER_PORT", "8080");
+        envVariables.put("AWS_PRODUCTSDDB_NAME", productsDdb.getTableName());
+        envVariables.put("AWS_REGION", this.getRegion());
+        envVariables.put("AWS_XRAY_DAEMON_ADDRESS", "0.0.0.0:2000");
+        envVariables.put("AWS_XRAY_CONTEXT_MISSING", "IGNORE_ERROR");
+        envVariables.put("AWS_XRAY_TRACING_NAME", "productsservice");
+
         fargateTaskDefinition.addContainer("ProductsServiceContainer",
                 ContainerDefinitionOptions.builder()
-                        .image(ContainerImage.fromEcrRepository(productsServiceProps.repository(), "1.4.0"))
+                        .image(ContainerImage.fromEcrRepository(productsServiceProps.repository(), "1.5.0"))
                         .containerName("productsService")
                         .logging(logDriver)
-                        .portMappings(List.of(PortMapping.builder()
-                                .containerPort(SERVER_PORT)
+                        .portMappings(Collections.singletonList(PortMapping.builder()
+                                .containerPort(8080)
                                 .protocol(Protocol.TCP)
                                 .build()))
-                        .environment(Map.of(
-                                "SERVER_PORT", String.valueOf(SERVER_PORT),
-                                "AWS_PRODUCTSDDB_NAME", productDdb.getTableName(),
-                                "AWS_REGION", this.getRegion(),
-                                "AWS_XRAY_DAEMON_ADDRESS", "0.0.0.0:2000",
-                                "AWS_XRAY_CONTEXT_MISSING", "IGNORE_ERROR",
-                                "AWS_XRAY_TRACING_NAME", "productsservice",
-                                "LOGGING_LEVEL_ROOT", "INFO"))
+                        .environment(envVariables)
+                        .cpu(384)
+                        .memoryLimitMiB(896)
                         .build());
 
         fargateTaskDefinition.addContainer("xray", ContainerDefinitionOptions.builder()
@@ -89,18 +91,18 @@ public class ProductsServiceStack extends Stack {
                                 .build()))
                         .streamPrefix("XRayProductsService")
                         .build()))
-                        .portMappings(List.of(PortMapping.builder()
-                                .containerPort(2000)
-                                .protocol(Protocol.UDP)
-                                .build()))
-                        .cpu(128)
-                        .memoryLimitMiB(128)
+                .portMappings(Collections.singletonList(PortMapping.builder()
+                        .containerPort(2000)
+                        .protocol(Protocol.UDP)
+                        .build()))
+                .cpu(128)
+                .memoryLimitMiB(128)
                 .build());
         fargateTaskDefinition.getTaskRole().addManagedPolicy(ManagedPolicy.fromAwsManagedPolicyName("AWSXrayWriteOnlyAccess"));
 
         ApplicationListener applicationListener = productsServiceProps.applicationLoadBalancer()
                 .addListener("ProductsServiceAlbListener", ApplicationListenerProps.builder()
-                        .port(SERVER_PORT)
+                        .port(8080)
                         .protocol(ApplicationProtocol.HTTP)
                         .loadBalancer(productsServiceProps.applicationLoadBalancer())
                         .build());
@@ -114,40 +116,42 @@ public class ProductsServiceStack extends Stack {
                         .assignPublicIp(true) // Just for study
                         .build());
         productsServiceProps.repository().grantPull(Objects.requireNonNull(fargateTaskDefinition.getExecutionRole()));
-        fargateService.getConnections().getSecurityGroups().get(0).addIngressRule(Peer.anyIpv4(), Port.tcp(SERVER_PORT));
+        fargateService.getConnections().getSecurityGroups().get(0).addIngressRule(Peer.anyIpv4(), Port.tcp(8080));
 
-        applicationListener.addTargets("ProductsServiceAlbTarget",
-                AddApplicationTargetsProps.builder()
-                        .targetGroupName("productsServiceAlb")
-                        .port(SERVER_PORT)
-                        .protocol(ApplicationProtocol.HTTP)
-                        .targets(List.of(fargateService))
-                        .deregistrationDelay(Duration.seconds(30))
-                        .healthCheck(HealthCheck.builder()
-                                .enabled(true)
-                                .interval(Duration.seconds(30))
-                                .timeout(Duration.seconds(10))
-                                .path("/actuator/health")
-                                .port(String.valueOf(SERVER_PORT))
-                                .build())
-                        .build());
+        applicationListener.addTargets("ProductsServiceAlbTarget", AddApplicationTargetsProps.builder()
+                .targetGroupName("productsServiceAlb")
+                .port(8080)
+                .protocol(ApplicationProtocol.HTTP)
+                .targets(Collections.singletonList(fargateService))
+                .deregistrationDelay(Duration.seconds(30))
+                .healthCheck(HealthCheck.builder()
+                        .enabled(true)
+                        .interval(Duration.seconds(30))
+                        .timeout(Duration.seconds(10))
+                        .path("/actuator/health")
+                        .port("8080")
+                        .build())
+                .build()
+        );
 
         NetworkListener networkListener = productsServiceProps.networkLoadBalancer()
                 .addListener("ProductsServiceNlbListener", BaseNetworkListenerProps.builder()
-                        .port(SERVER_PORT)
+                        .port(8080)
                         .protocol(software.amazon.awscdk.services.elasticloadbalancingv2.Protocol.TCP)
                         .build());
 
         networkListener.addTargets("ProductsServiceNlbTarget", AddNetworkTargetsProps.builder()
-                .port(SERVER_PORT)
+                .port(8080)
                 .protocol(software.amazon.awscdk.services.elasticloadbalancingv2.Protocol.TCP)
                 .targetGroupName("productsServiceNlb")
-                .targets(List.of(fargateService.loadBalancerTarget(LoadBalancerTargetOptions.builder()
-                        .containerName("productsService")
-                        .containerPort(SERVER_PORT)
-                        .protocol(Protocol.TCP)
-                        .build())))
-                .build());
+                .targets(Collections.singletonList(
+                        fargateService.loadBalancerTarget(LoadBalancerTargetOptions.builder()
+                                .containerName("productsService")
+                                .containerPort(8080)
+                                .protocol(Protocol.TCP)
+                                .build())))
+                .build()
+        );
     }
 }
 
